src/BloomBrowserUI/bookEdit/css/editMode.less
/* ... */
BUTTON.moveButton
{
	/*+placement:anchor-top-left -19px -17px;*/
	position: absolute;
	left: -19px;
	top: -17px;
	background-image: url("../img/moveDivButton.png") !important;
	background-repeat: no-repeat;
	background-color: transparent;
	width: 16px;
	height: 16px;
	border: 0 hidden #000000;
	z-index: 1000;
	background-size: contain;
}
TEXTAREA, DIV.bloom-editable
{
	border: thin solid #C0B9B9;
	/*[disabled]min-height:34px;*/
}
/*need a darker border when we have a background color*/
.coverColor TEXTAREA, DIV.bloom-editable
{
	border: thin solid rgba(0, 0, 0, 0.2);
}
IMG.hoverUp
{
	background-color: #DFDFDF;
	border: 1px outset #000000;
}
TEXTAREA:focus, DIV.bloom-editable:focus
{
	border: 1px solid rgba(82, 168, 236, 0.6);
	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
	outline: 0;
}
TEXTAREA.province
{
	width: 151px;
	height: 33px;
}

@OverflowColor: red;

.overflow
{
	color: @OverflowColor !important;
	border: solid thin @OverflowColor !important; //NB: can't afford to go "thick" because it throws off the calculation
	p:empty:after{ //br:after would be great but it doesn't work
		content:'¶';
	}
}
.childOverflowingThis {
	border-bottom: solid thick @OverflowColor !important;
	// no, that's really confusing when text far from the crime turns red color: red !important;
}
//we do both in case one is already used and !important
.Layout-Problem-Detected:before, .Layout-Problem-Detected:after {
	content: attr(layoutproblem);
	text-align: left;
	color: @OverflowColor;
	position:absolute;
	bottom: 0;
	left: 0;
	font-size: 9pt;
	line-height: 9pt;
}

.fieldInfo-qtip .ui-tooltip-content
{
	border: 0 solid #A03C50;
	padding: 0px;
	text-align: right;
	color: #363333;
	font-size: 8pt;
	margin-top: -8px;
	margin-right: 8px;
}

.uibloomSourceTextsBubble {
	// The "!important"s in here are needed to override qtip's defaults
	border-radius: 15px;
	background-color: @SelectedTabColor !important;
	border-color: @TabBorder !important;
	border-width: 2px !important;
	.qtip-content {
		padding: 0 9px 9px !important; // even up space around source bubbles
		// Qtip defaults to overflow: hidden, which masks the extra language dropdown
		&:hover {
			overflow: visible !important;
		}
	}
}

@TabColor: #ffffc3;
@TabBorder: @MediumGray;
@SelectedTabColor: #ffffa5;

.ui-sourceTextsForBubble {
	position: relative;
	background-color: @SelectedTabColor;
	NAV {
		display: block;
		height: 34px;
		margin: 0 -8px;
		background-color: @TabColor;
		border-top-right-radius: 15px;
		border-top-left-radius: 15px;
		> UL {
			z-index: 1;
			background-color: transparent;
			text-align: center;
			margin: 0;
			padding: 0;
			display: flex;
			list-style: outside none none;
			top: 1px;
			line-height: 22px;
			&::after {
				position: absolute;
				content: "";
				width: 100%;
				bottom: 0;
				left: 0;
				border-bottom: 2px solid @TabBorder;
				z-index: 2;
			}
			> LI {
				font-size: 9pt;
				height: 31px;
				border-right: 1px solid @TabBorder;
				border-top-right-radius: 6px;
				float: left;
				flex: none;
				background-color: @TabColor;
				&:not(:first-child) {
					border-left: 1px solid @TabBorder;
					border-top-left-radius: 6px;
				}
				&:first-child {
					border-top-left-radius: 15px; // needed to overcome gecko bug
				}
				&.active {
					background-color: @SelectedTabColor;
					border-bottom-color: @SelectedTabColor; // make active tab appear in front
					z-index: 3;
				}
				A {
					max-width: 79px;
					white-space: nowrap;
					text-overflow: ellipsis;
					overflow: hidden;
					display: block;
					padding: 5px;
					outline: none;
					text-decoration: none;
					color: black;
					font-family: Segoe UI, sans-serif;
					&.active {
						font-weight: bold;
					}
					&:hover {
						text-decoration: underline;
						background-color: @SelectedTabColor transparent;
					}
				}
			}
		}
	}
	.source-text{
		font-size: 10pt;
		line-height: 1.5;
		color: black;
		padding-top: 4px;

		//thai script languages. If using Arial, they need to be 30% bigger or so. With the
		// popular Angsana New, it would need to be like 100% bigger
		&:lang(th), &:lang(km),&:lang(kjg), &:lang(prt){
			font-size: 18pt;
		}
	}
}

@DropdownBackground: @TabColor;
@DropdownHovered: @SelectedTabColor;

.dropdown-list {
	max-height: 200px;
	overflow-y: auto;
	text-align: left;
	opacity: 1;
	margin: 0;
	padding: 0;
	position: relative;
	margin-top: 2px;
	white-space: nowrap;
	border: 1px solid @TabBorder;
	background-color: @DropdownBackground !important; // !important is needed to override a rule in editPaneGlobal.css
	top: 0;
	font-size: 9pt;
	z-index: 5;
	LI {
		&:hover {
			background-color: @DropdownHovered;
		}
	}
}
.dropdown-menu {
	width: 32px;
	border: none !important;
	&:hover {
		UL {
			display: inline-block;
		}
	}
	DIV {
		margin: 4px 0 0 0;
		display: block;
		&::before {
			content: "(";
		}
		&::after {
			content: ")";
		}
	}
	UL {
		display: none;
	}
}
.panel-container
{
	border: 1px solid black;
	padding: 0 10px;
}
DIV.textWholePage UL
{
	/*+placement:displace 1px -37px;*/
	position: absolute;
	margin-left: 1px;
	margin-top: -37px;
}
/*suggested by http://jqueryui.com/docs/Upgrade_Guide_17*/
.ui-mouseOver .ui-resizable-handle
{
	width: 8px;
	height: 8px;
	border: 1px solid rgb(128, 128, 128);
	background: rgb(242, 242, 242);
}
.ui-resizable-n, .ui-resizable-s
{
	left: 45%;
}
.ui-resizable-e, .ui-resizable-w
{
	top: 45%;
}
.ui-resizable-se
{
	/*[disabled]bottom:-5px;*/
	/*[disabled]right:-5px;*/
}
DIV.marginBox
{
	border: 1px solid rgba(115, 189, 189, 0.3);
}
.bloom-frontMatter DIV.marginBox
{
	/*With the colored background, the margin border is just too distracting, and it doesn't (yet) help the user in any way because he can't move things around on the frontmatter*/
	border: none;
}
/* ... */

